k8s/apps/production/podinfo/podinfo-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: podinfod
